gateway/grid-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: hostedgrid
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: https-hostedgrid
    protocol: HTTPS
    port: 443
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: hostedgrid-tls
    allowedRoutes:
      namespaces:
        from: All
