gateway/grid-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grid-vhost-routes
spec:
  parentRefs:
  - name: hostedgrid
  hostnames:
  - "hostedgrid.app"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kahuna
      port: 9000
  - matches:
    - path:
        type: PathPrefix
        value: /auth
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: auth
      port: 9000
  - matches:
    - path:
        type: PathPrefix
        value: /collections
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: collections
      port: 9000
  - matches:
    - path:
        type: PathPrefix
        value: /cropper
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: cropper
      port: 9000
  - matches:
    - path:
        type: PathPrefix
        value: /image-loader
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: image-loader
      port: 9000
  - matches:
    - path:
        type: PathPrefix
        value: /imgops
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: imgops
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /leases
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: leases
      port: 9000
  - matches:
    - path:
        type: PathPrefix
        value: /media-api
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: media-api
      port: 9000
  - matches:
    - path:
        type: PathPrefix
        value: /metadata-editor
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: metadata-editor
      port: 9000
